Finding user info for argon done.

--- a/ca4/public/login.html
+++ b/ca4/public/login.html
@@ -6,7 +6,7 @@
 
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Sign Up</title>
+        <title>Login</title>
 
     </head>
 
@@ -16,7 +16,7 @@
                 <form action="/sign-up-info">
                     <input type="email" name="email" placeholder="Email" required>
                     <input type="password" name="password" placeholder="Password" required>
-                    <input type="submit" value="sign-up">
+                    <input type="submit" value="Login">
                 </form>
             </div>
         </div>
@@ -27,7 +27,7 @@
                     <a href="/Assessment/Chat Website/ca4/public/login.html" style="color:white;" class="btn">Login</a>
                 </div>
                 <div class="col">
-                    <a href="/Assessment/Chat Website/ca4/public/sign-up.html" style="color:white;" class="btn">Sign Up</a>
+                    <a href="/Assessment/Chat Website/ca4/public/sign-up.html" style="color:white;" class="btn"></a>
                 </div>
             </div>
         </div>
