--- a/ca4/public/sign-up.html
+++ b/ca4/public/sign-up.html
@@ -13,10 +13,10 @@
     <body>
         <div class="col">
             <div class="hide-md-lg">
-                <form action="/sign-up-info">
+                <form action="/sign-up">
                     <input type="email" name="email" placeholder="Email" required>
                     <input type="password" name="password" placeholder="Password" required>
-                    <input type="submit" value="sign-up">
+                    <input type="submit" value="Sign Up">
                 </form>
             </div>
         </div>
