--- a/ca4/public/index.html
+++ b/ca4/public/index.html
@@ -16,6 +16,7 @@
 
         <p><a href = "chat.html">Chat</a></p>
         <p><a href = "sign-up.html">Sign Up</a></p>
+        <p><a href = "login.html">Login</a>
         
         <script src="js/client.js"></script>
      
