--- a/ca4/public/login.html
+++ b/ca4/public/login.html
@@ -7,16 +7,15 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Login</title>
-        <script src="/Assessment/Chat Website/Chat-Website/ca4/public/js/client.js"></script>
 
     </head>
 
     <body>
         <div class="col">
             <div class="hide-md-lg">
-                <form action="/sign-up" method="post">
-                    <input type="email" name="email" placeholder="Email" required>
-                    <input type="password" name="password" placeholder="Password" required>
+                <form method="post">
+                    <input type="email" name="email" placeholder="Email" id="email" required>
+                    <input type="password" name="password" placeholder="Password" id="password" required>
                     <button type="submit">Login</button>
                 </form>
             </div>
