--- a/ca4/public/chat.html
+++ b/ca4/public/chat.html
@@ -1,12 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Socket.io simple chat</title>
-    <link rel="stylesheet" href="/css/demo.css" />
+    <link rel="stylesheet" href="css/demo.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
   </head>
   <body>
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #89cff0;">
+      <a class="navbar-brand" href="home.html"></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAlMarkup">
+          <div class="navbar-nav">
+            <a class="nav-item nav-link">spacefillerspacefille</a>
+            <a class="nav-item nav-link"></a>
+            <a class="nav-item nav-link" href="home.html">Home</a>
+            <a class="nav-item nav-link" href="index.html">About Us</a>
+            <a class="nav-item nav-link" href="login.html">Login</a>
+            <a class="nav-item nav-link" href="sign-up.html">Sign Up</a>
+          </div>
+      </div>
+  </nav>
+
     <div class="sidenav">
         <div class="inbox__people">
             <h4>Active users</h4>
@@ -26,7 +45,7 @@
         </div>
 
         <form class="message_form">
-            <input type="text" class="message_form__input" placeholder="Type a message" />
+            <input type="text" class="message_form__input" placeholder="Type a message">
             <button class="message_form__button" type="submit">
               Enter
             </button>
