--- a/ca4/public/sign-up.html
+++ b/ca4/public/sign-up.html
@@ -7,30 +7,54 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Sign Up</title>
+        <link rel="stylesheet" href="css/demo.css">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 
     </head>
 
     <body>
+        <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #89cff0;">
+            <a class="navbar-brand" href="home.html"></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAlMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-item nav-link" href="home.html">Home</a>
+                    <a class="nav-item nav-link" href="index.html">About Us</a>
+                    <a class="nav-item nav-link" href="login.html">Login</a>
+                    <a class="nav-item nav-link active" href="sign-up.html">Sign Up</a>
+                </div>
+            </div>
+        </nav>
+
         <div class="col">
             <div class="hide-md-lg">
-                <form action="/sign-up">
-                    <input type="email" name="email" placeholder="Email" required>
-                    <input type="password" name="password" placeholder="Password" required>
+                <form method="post">
+                    <p>Please enter username and password to sign-up.</p>
+                    <input type="email" name="user[email]" placeholder="Email" required>
+                    <input type="password" name="user[password]" placeholder="Password" required>
                     <input type="submit" value="Sign Up">
                 </form>
             </div>
         </div>
-        
-        <div class="bottom-container">
-            <div class="row">
-                <div class="col">
-                    <a href="/Assessment/Chat Website/ca4/public/login.html" style="color:white;" class="btn">Login</a>
-                </div>
-                <div class="col">
-                    <a href="/Assessment/Chat Website/ca4/public/sign-up.html" style="color:white;" class="btn">Sign Up</a>
-                </div>
-            </div>
-        </div>
+
+        <script>
+            // Post send with email and password data.
+    fetch('/sign-up.html', {
+        method: 'POST',
+        headers: {
+        'Content-Type': 'application/json'
+    },
+    body: JSON.stringify({
+        user: {
+            email: "",
+            password: ""
+        }
+    })
+});
+        </script>
 
     </body>
 
